// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must apply entity key 1`] = `
{
  "a": {
    "characterList": [
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "Alpha",
    "type": "unstyled",
  },
  "b": {
    "characterList": [
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  "c": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  "d": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  "e": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  "f": {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
}
`;

exports[`must apply entity key accross multiple blocks 1`] = `
{
  "a": {
    "characterList": [
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
      {
        "entity": "x",
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "Alpha",
    "type": "unstyled",
  },
  "b": {
    "characterList": [
      {
        "entity": "x",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "x",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "x",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "x",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "x",
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  "c": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  "d": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  "e": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  "f": {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
}
`;

exports[`must apply multiple entities across multiple blocks 1`] = `
{
  "characterList": [
    {
      "entity": "x",
      "style": Set {},
    },
    {
      "entity": "x",
      "style": Set {},
    },
    {
      "entity": "x",
      "style": Set {},
    },
    {
      "entity": "x",
      "style": Set {},
    },
    {
      "entity": "x",
      "style": Set {},
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Alpha",
  "type": "unstyled",
}
`;

exports[`must apply multiple entities across multiple blocks 2`] = `
{
  "characterList": [
    {
      "entity": "x",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "x",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "x",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "x",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "y",
      "style": Set {
        "BOLD",
      },
    },
  ],
  "data": {},
  "depth": 0,
  "key": "b",
  "text": "Bravo",
  "type": "unordered-list-item",
}
`;

exports[`must apply multiple entities across multiple blocks 3`] = `
{
  "characterList": [
    {
      "entity": "y",
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
  ],
  "data": {},
  "depth": 0,
  "key": "c",
  "text": "Test",
  "type": "code-block",
}
`;

exports[`must apply multiple entities to different blocks 1`] = `
{
  "characterList": [
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": "x",
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Alpha",
  "type": "unstyled",
}
`;

exports[`must apply multiple entities to different blocks 2`] = `
{
  "characterList": [
    {
      "entity": "2",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "y",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "y",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "2",
      "style": Set {
        "BOLD",
      },
    },
    {
      "entity": "2",
      "style": Set {
        "BOLD",
      },
    },
  ],
  "data": {},
  "depth": 0,
  "key": "b",
  "text": "Bravo",
  "type": "unordered-list-item",
}
`;

exports[`must apply multiple entities to same block 1`] = `
{
  "characterList": [
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": "x",
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
    {
      "entity": "y",
      "style": Set {},
    },
    {
      "entity": null,
      "style": Set {},
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Alpha",
  "type": "unstyled",
}
`;

exports[`must apply null entity 1`] = `
{
  "a": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "Alpha",
    "type": "unstyled",
  },
  "b": {
    "characterList": [
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  "c": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  "d": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  "e": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  "f": {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
}
`;

exports[`must apply null entity key accross multiple blocks 1`] = `
{
  "a": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "Alpha",
    "type": "unstyled",
  },
  "b": {
    "characterList": [
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": null,
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  "c": {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  "d": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  "e": {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  "f": {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
}
`;
